updated docs links to github client bindings repos

--- a/app/web/views/layouts/docs.erb
+++ b/app/web/views/layouts/docs.erb
@@ -26,6 +26,7 @@
               <li><a href='/docs/api/v1/authentication'>Authentication</a></li>
               <li><a href='/docs/api/v1/models'>Models</a></li>
               <li><a href='/docs/api/v1/snapshots'>Snapshots</a></li>
+              <li><a href='/docs/api/v1/streams'>Streams</a></li>
               <li><a href='/docs/api/v1/users'>Users</a></li>
               <li><a href='/docs/api/v1/vendors'>Vendors</a></li>
             </ul>
@@ -34,19 +35,15 @@
           <ul>
             <li>
             <i class='fa fa-cog'></i>
-            evercam.js
+            Client Bindings
             <ul>
-              <li>coming soon&hellip;</li>
+              <li><a href='http://github.com/evercam/evercam.py' target='_blank'>Python</a></li>
+              <li><a href='http://github.com/evercam/evercam.node' target='_blank'>NodeJS</a></li>
+              <li><a href='http://github.com/evercam/evercam.java' target='_blank'>Java</a></li>
+              <li>more soon&hellip;</li>
             </ul>
             </li>
           </ul>
-          <ul>
-            <li>
-            <i class='fa fa-cog'></i>
-            evercam.rb
-            <ul>
-              <li>coming soon&hellip;</li>
-            </ul>
             </li>
           </ul>
           <ul>
