--- a/app/web/views/docs/api/v1/snapshots.erb
+++ b/app/web/views/docs/api/v1/snapshots.erb
@@ -10,7 +10,20 @@ This operation returns all data required to connect to the stream device, authen
 <p>
 A typical cURL command to GET the data for any particular private stream would look like this:
 </p>
-<pre><code class='bash'>curl -X GET https://api.evercam.io/v1/streams/{stream}/snapshots/new \
+
+
+<!-- Nav tabs -->
+<ul class="nav nav-pills pull-right">
+  <li class="active"><a href="#curl" data-toggle="tab">Curl</a></li>
+  <li><a href="#java" data-toggle="tab">Java</a></li>
+  <li><a href="#node" data-toggle="tab">Node</a></li>
+  <li><a href="#python" data-toggle="tab">Python</a></li>
+</ul>
+
+<!-- Tab panes -->
+<div class="tab-content">
+  <div class="tab-pane active" id="curl">
+      <pre><code class='bash'>curl -X GET https://api.evercam.io/v1/streams/{stream}/snapshots/new \
   -H 'Authorization: Bearer {token}' </code></pre>
 <p>
 Assuming your authentication information is verified and you are authorized to view the stream, the server will respond with an <%= code(200) %> status and the stream snapshot data using the following format:
@@ -33,4 +46,78 @@ Assuming your authentication information is verified and you are authorized to v
   }
 }
 </code></pre>
+  </div>
 
+  <div class="tab-pane" id="java">
+    <pre><code class='java'>import io.evercam.*;
+    </code></pre>
+  </div>
+  <div class="tab-pane" id="node">
+    <pre><code class='javascript'>var evercam = require("evercam");
+evercam.user.create({
+    forename: 'Joe',
+    lastname: 'Bloggs',
+    email: 'joe.bloggs@example.org',
+    username: 'joeyb',
+    country: 'us'
+    },
+    function (errors, user) {
+      // asynchronously called
+    }
+);
+    </code></pre>
+
+      If the operation was successful the function will have null errors and user will look like this:
+    </p>
+    <pre><code class='json'>
+{
+    "id": "joeyb",
+    "forename": "Joe",
+    "lastname": "Bloggs",
+    "email": "joe.bloggs@example.org",
+    "country": "us",
+    "created_at": 1386582328,
+    "updated_at": 1386582328,
+    "confirmed_at": null
+}
+    </code></pre>
+    <p>
+    Should the operation fail due to invalid parameters the function will have following errors and undefined user:
+    <pre><code class='json'>[Error: Username already exists]
+    </code></pre>
+  </div>
+
+  <div class="tab-pane" id="python">
+    <pre><code class='python'>import evercam
+user = evercam.User.create_user({
+    'forename': 'Joe',
+    'lastname': 'Bloggs',
+    'email': 'joe.bloggs@example.org',
+    'username': 'joeyb',
+    'country': 'us'
+})
+    </code></pre>
+
+      If the operation was successful user object will look like this:
+    </p>
+    <pre><code class='json'>
+&lt;evercam.User object&gt; JSON: {
+    "id": "joeyb",
+    "forename": "Joe",
+    "lastname": "Bloggs",
+    "email": "joe.bloggs@example.org",
+    "country": "us",
+    "created_at": 1386582328,
+    "updated_at": 1386582328,
+    "confirmed_at": null
+}
+    </code></pre>
+    <p>
+    Should the operation fail due to invalid parameters the function will throw
+    <pre><code class='python'>evercam.errors.UsernameAlreadyExists
+    </code></pre>
+
+  </div>
+</div>
+
+<p>
