--- a/app/web/views/docs/api/v1/users.erb
+++ b/app/web/views/docs/api/v1/users.erb
@@ -5,7 +5,18 @@
 This operation starts the process of creating a new user. It expects the basic user information such as forename, lastname, email, etc and will begin the process of signing up a new user by sending a confirmation link to the supplied email. If the supplied information is valid the server will respond with a <%= code(201) %> status. Any invalid information will cause the server to respond with a <%= code(400) %> status.
 </p>
 <h5>Example Request</h5>
-<pre><code class='http'>curl -X POST https://api.evercam.io/v1/users \
+<!-- Nav tabs -->
+<ul class="nav nav-pills pull-right">
+  <li class="active"><a href="#curl" data-toggle="tab">Curl</a></li>
+  <li><a href="#java" data-toggle="tab">Java</a></li>
+  <li><a href="#node" data-toggle="tab">Node</a></li>
+  <li><a href="#python" data-toggle="tab">Python</a></li>
+</ul>
+
+<!-- Tab panes -->
+<div class="tab-content">
+  <div class="tab-pane active" id="curl">
+    <pre><code class='http'>curl -X POST https://api.evercam.io/v1/users \
   -d "forename=Joe" \
   -d "lastname=Bloggs" \
   -d "email=joe.bloggs@example.org" \
@@ -33,7 +44,79 @@ This operation starts the process of creating a new user. It expects the basic u
     ...
   ]
 }
-</code></pre>
+    </code></pre>
+  </div>
+<div class="tab-pane" id="java">
+    <pre><code class='java'>import io.evercam.*;
+    </code></pre>
+  </div>
+  <div class="tab-pane" id="node">
+    <pre><code class='javascript'>var evercam = require("evercam");
+evercam.user.create({
+    forename: 'Joe',
+    lastname: 'Bloggs',
+    email: 'joe.bloggs@example.org',
+    username: 'joeyb',
+    country: 'us'
+    },
+    function (errors, user) {
+      // asynchronously called
+    }
+);
+    </code></pre>
+
+      If the operation was successful the function will have null errors and user will look like this:
+    </p>
+    <pre><code class='json'>
+{
+    "id": "joeyb",
+    "forename": "Joe",
+    "lastname": "Bloggs",
+    "email": "joe.bloggs@example.org",
+    "country": "us",
+    "created_at": 1386582328,
+    "updated_at": 1386582328,
+    "confirmed_at": null
+}
+    </code></pre>
+    <p>
+    Should the operation fail due to invalid parameters the function will have following errors and undefined user:
+    <pre><code class='json'>[Error: Username already exists]
+    </code></pre>
+  </div>
+
+  <div class="tab-pane" id="python">
+    <pre><code class='python'>import evercam
+user = evercam.User.create_user({
+    'forename': 'Joe',
+    'lastname': 'Bloggs',
+    'email': 'joe.bloggs@example.org',
+    'username': 'joeyb',
+    'country': 'us'
+})
+    </code></pre>
+
+      If the operation was successful user object will look like this:
+    </p>
+    <pre><code class='json'>
+&lt;evercam.User object&gt; JSON: {
+    "id": "joeyb",
+    "forename": "Joe",
+    "lastname": "Bloggs",
+    "email": "joe.bloggs@example.org",
+    "country": "us",
+    "created_at": 1386582328,
+    "updated_at": 1386582328,
+    "confirmed_at": null
+}
+    </code></pre>
+    <p>
+    Should the operation fail due to invalid parameters the function will throw
+    <pre><code class='python'>evercam.errors.UsernameAlreadyExists
+    </code></pre>
+
+  </div>
+</div>
 
 <h4>GET /v1/users/{username}/streams</h4>
 <p>
