--- a/app/web/views/signup.erb
+++ b/app/web/views/signup.erb
@@ -1,38 +1,46 @@
-<% @title = 'Signup' %> 
-<div class='col-xs-8 col-xs-offset-2'>
-  <h1>Sign Up</h1>
-  <form method="POST" role="form">
-
-    <div class="form-group">
-      <div class="form-inline">
-        <div class="form-group col-xs-6">
-          <label for="forename">Forename</label>
-          <%= input(:forename, :text, :required, placeholder: 'Forename') %>
-        </div>
-        <div class="form-group col-xs-6">
-          <label for="lastname">Lastname</label>
-          <%= input(:lastname, :text, :required, placeholder: 'Lastname') %>
-        </div>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label for="country">Country</label>
-      <%= select(:country, @countries.map { |c| [c.iso3166_a2, c.name] }, :required) %>
-    </div>
-
-    <div class="form-group">
-      <label for="username">Username</label>
-      <%= input(:username, :text, :required, placeholder: 'Username') %>
-    </div>
-
-    <div class="form-group">
-      <label for="email">Email</label>
-      <%= input(:email, :text, :required, placeholder: 'Email') %>
-    </div>
-
-    <input class="btn btn-primary pull-right" type="submit" value="Sign up"></input>
-
-  </form>
+<div class='col-sm-10 col-sm-offset-1'>
+	<div class="form_container">
+		<div class ="signup"><% @title = 'Signup' %> 
+		<h1>Sign Up</h1>
+			<div class="row">
+				<div class="col-sm-10 col-sm-offset-1">
+					<form method="POST" role="form">
+						<div class="form-group">
+							<div class="form-inline">
+								<div class="form-group col-xs-6">
+									  <label for="forename">Forename</label>
+									  <%= input(:forename, :text, :required, placeholder: 'Forename') %>
+								</div>
+								<div class="form-group col-xs-6">
+									<label for="lastname">Lastname</label>
+									<%= input(:lastname, :text, :required, placeholder: 'Lastname') %>
+								</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="country">Country</label>
+							<%= select(:country, @countries.map { |c| [c.iso3166_a2, c.name] }, :required) %>
+						</div>
+						<div class="form-group">
+						  <label for="username">Username</label>
+						  <%= input(:username, :text, :required, placeholder: 'Username') %>
+						</div>
+						<div class="form-group">
+						  <label for="email">Email</label>
+						  <%= input(:email, :text, :required, placeholder: 'Email') %>
+						</div>
+						<input class="btn btn-primary pull-right" type="submit" value="Sign up" id="submit"></input>
+					</form>
+				</div>	
+			</div>
+			<div class="account">
+				<div class="row">
+					<div class="col-sm-12">
+						<p>Already have an account? <a href="#">Sign In</a></p>
+					</div>
+				</div>
+			</div>			
+		</div>
+	</div>
 </div>
 
