--- a/app/web/views/signup.erb
+++ b/app/web/views/signup.erb
@@ -36,7 +36,7 @@
 			<div class="account">
 				<div class="row">
 					<div class="col-sm-12">
-						<p>Already have an account? <a href="#">Sign In</a></p>
+						<p>Already have an account? <a href="/login">Sign In</a></p>
 					</div>
 				</div>
 			</div>			
