--- a/app/web/views/login.erb
+++ b/app/web/views/login.erb
@@ -12,7 +12,7 @@
 							<div class='form-group'>
 								<!--<label for='password'>Password</label>-->
 								<input class='form-control' id ="inputEmail3" name='password' type='password' placeholder='password' required>
-								<p>Forgot your password? <a href="#">Click here</a></p>
+								<p><a href="#">Forgot your password? </a></p>
 							</div>
 							<button type='submit' class='btn btn-primary pull-right' id="submit">Sign In</button>
 						</form>
