--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -13,7 +13,6 @@ body {
   outline: none
 }
 
-
 #wrapper {
   position: relative;
   min-height: 100.1%;
@@ -324,7 +323,6 @@ header {
   background: #fff;
 }
 
-
 header h1 {
   display: inline-block;
   float: left;
@@ -337,8 +335,6 @@ header h1 {
   font-weight: normal;
   font-family: 'Pacifico', cursive;
 }
-
-
 
 header h1 a.navbar-brand {
   font-size: 50px;
@@ -369,7 +365,6 @@ header #logo {
   cursor: pointer;
   margin-top: 10px;
 }
-
 
 .navbar-default{
 	background-color: #FFF;
@@ -1848,7 +1843,7 @@ color: #eb5f53;
   font-size: 3em;
   font-weight: bold;
   margin: 10px 0px;
-  padding: 10px;
+  padding: 10px 0 25px 0;
 }
 
 #beta h4 {
@@ -1896,7 +1891,7 @@ color: #eb5f53;
 
 #beta form {
   background: #efeeee; !important;
-  padding: 15px 0px 30px 0px;
+  padding: 15px 0px 50px 0px;
   border-radius: 4px;
 }
 
@@ -2190,9 +2185,6 @@ color: #eb5f53;
 	color: #333;
 }
 
-
-
-
 /* FORM STYLES */
 .form-control.has-error {
   border-color: #b94a48;
@@ -2293,6 +2285,7 @@ color: #eb5f53;
 	-webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
+
 .contact-form  #message{
 	display: block;
 	border: 1px solid #eb5f53;
@@ -2311,6 +2304,7 @@ color: #eb5f53;
 	-webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
+
 .contactform_container{
 	padding: 40px 2px 30px 0px;
 	margin: 10px 0px 30px 0px;
