--- a/app/web/views/docs/api/v1/users.erb
+++ b/app/web/views/docs/api/v1/users.erb
@@ -46,7 +46,8 @@ This operation starts the process of creating a new user. It expects the basic u
 }
     </code></pre>
   </div>
-<div class="tab-pane" id="java">
+
+  <div class="tab-pane" id="java">
     <pre><code class='java'>import io.evercam.*;
     </code></pre>
   </div>
@@ -58,29 +59,26 @@ evercam.user.create({
     email: 'joe.bloggs@example.org',
     username: 'joeyb',
     country: 'us'
-    },
-    function (errors, user) {
-      // asynchronously called
-    }
+  },
+  function (errors, user) {
+    // asynchronously called
+  }
 );
     </code></pre>
-
-      If the operation was successful the function will have null errors and user will look like this:
-    </p>
+    <h5>Example Success Response</h5>
     <pre><code class='json'>
 {
-    "id": "joeyb",
-    "forename": "Joe",
-    "lastname": "Bloggs",
-    "email": "joe.bloggs@example.org",
-    "country": "us",
-    "created_at": 1386582328,
-    "updated_at": 1386582328,
-    "confirmed_at": null
+  "id": "joeyb",
+  "forename": "Joe",
+  "lastname": "Bloggs",
+  "email": "joe.bloggs@example.org",
+  "country": "us",
+  "created_at": 1386582328,
+  "updated_at": 1386582328,
+  "confirmed_at": null
 }
     </code></pre>
-    <p>
-    Should the operation fail due to invalid parameters the function will have following errors and undefined user:
+    <h5>Example Failure Response</h5>
     <pre><code class='json'>[Error: Username already exists]
     </code></pre>
   </div>
@@ -88,30 +86,27 @@ evercam.user.create({
   <div class="tab-pane" id="python">
     <pre><code class='python'>import evercam
 user = evercam.User.create_user({
-    'forename': 'Joe',
-    'lastname': 'Bloggs',
-    'email': 'joe.bloggs@example.org',
-    'username': 'joeyb',
-    'country': 'us'
+  'forename': 'Joe',
+  'lastname': 'Bloggs',
+  'email': 'joe.bloggs@example.org',
+  'username': 'joeyb',
+  'country': 'us'
 })
     </code></pre>
-
-      If the operation was successful user object will look like this:
-    </p>
+    <h5>Example Success Response</h5>
     <pre><code class='json'>
 &lt;evercam.User object&gt; JSON: {
-    "id": "joeyb",
-    "forename": "Joe",
-    "lastname": "Bloggs",
-    "email": "joe.bloggs@example.org",
-    "country": "us",
-    "created_at": 1386582328,
-    "updated_at": 1386582328,
-    "confirmed_at": null
+  "id": "joeyb",
+  "forename": "Joe",
+  "lastname": "Bloggs",
+  "email": "joe.bloggs@example.org",
+  "country": "us",
+  "created_at": 1386582328,
+  "updated_at": 1386582328,
+  "confirmed_at": null
 }
     </code></pre>
-    <p>
-    Should the operation fail due to invalid parameters the function will throw
+    <h5>Example Failure Response</h5>
     <pre><code class='python'>evercam.errors.UsernameAlreadyExists
     </code></pre>
 
