added images to img folder for media page

--- a/app/web/views/media.erb
+++ b/app/web/views/media.erb
@@ -5,8 +5,8 @@
 			<div class="img_container">
 				<div class="col-sm-6 ">
 					<img src="/img/evercam_original.svg" alt="logo">
-					<p class="imgFile"><a href="">PNG</a></p>
-					<p class="imgSize">100x60</p>
+					<p class="imgFile"><a href="/img/logo_original_400x100.png" download="logo_original_400x100.png" title="logo_original_400x100.png">PNG</a></p>
+					<p class="imgSize">400x100</p>
 				</div>
 				<div class="col-sm-6 ">
 					<img src="/img/evercam_original.svg" alt="logo">
