--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -1409,7 +1409,6 @@ footer span a:hover {
 
 }
 
-
 @media (max-width: 767px) {
 
 #bs-example-navbar-collapse{
@@ -1602,7 +1601,6 @@ footer span a:hover {
 	width: 308px;
 	float: none;
   }
-
 
   .nav-tabs {
     margin: -5px 0 0 -5px
@@ -2065,6 +2063,10 @@ color: #eb5f53;
   width: 163px;
 }
 
+.signIn #submit:hover{
+  background: none repeat scroll 0 0 #9E3128;
+}
+
 #submit{
   background: none repeat scroll 0 0 #EB5F53;
   border: 0 none;
@@ -2080,6 +2082,11 @@ color: #eb5f53;
   width: 180px;
 }
 
+
+#submit:hover{
+	background: none repeat scroll 0 0 #9E3128;
+}
+  
 .form-group{
   margin-bottom: 20px;
 }
@@ -2139,6 +2146,10 @@ color: #eb5f53;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
+}
+
+.signup_form #signup:hover {
+  background: #9E3128;
 }
 
 .signup{
@@ -2330,4 +2341,10 @@ color: #eb5f53;
 	text-align: right;
 	font-size: 16px;
 	padding-top: 15px;
+}
+
+.icon_text p{
+	color: #4d4d4d;
+	font-size: 16px;
+	line-height: 20px;
 }
