updated markup to index page

--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -7,6 +7,27 @@
 
     <br />
 	
+	<div class="row block-2">
+		<div class="icon_text">
+			<div class="col-sm-4">
+				<i class="icon-meh icon-large"></i>
+				<i class=""><img src="/img/CIRCLE_smiley.svg" width="140"></i>
+				<h4>Free API</h4>
+				<p>Receive up to 100 requests per day.</p>
+			</div>
+			<div class="col-sm-4">
+				<i class=""><img src="/img/CIRCLE_dollars.svg" width="140"></i>
+				<h4>Pay As You Go</h4>
+				<p>Buy additional 10,000 requests for &#36;20.</p>
+			</div>
+			<div class="col-sm-4">
+				<i class=""><img src="/img/CIRCLE_rocket.svg" width="140"></i>
+				<h4>Pro API</h4>
+				<p>Unlimited requests per month, 30 day image/video archive and SSL connection.</p>
+			</div>
+		</div>
+	</div>    
+				
 	<div class="signup_form">
 		<form class="form-inline" role="form">
 			<h3>Interested? Sign Up Today&hellip;</h3>
@@ -21,8 +42,8 @@
     <br />
 	
 	<div id="marketplace">
-	
-		<h4>Take advantage of our marketplace apps and add amazing new <br />functionality to your camera streams in seconds&hellip;</h4>
+		<h1>Marketplace</h1>
+		<h4>Take advantage of our marketplace apps and add amazing<br /> new functionality to your camera streams in seconds&hellip;</h4>
     
 		  <div id="market_container">
 			<i data-desc="Create timelapse videos using image sequences captured by your camera" class="fa fa-5x fa-clock-o"></i>
