--- a/app/web/views/docs/api/v1/users.erb
+++ b/app/web/views/docs/api/v1/users.erb
@@ -51,6 +51,7 @@ This operation starts the process of creating a new user. It expects the basic u
     <pre><code class='java'>import io.evercam.*;
     </code></pre>
   </div>
+
   <div class="tab-pane" id="node">
     <pre><code class='javascript'>var evercam = require("evercam");
 evercam.user.create({
@@ -117,11 +118,22 @@ user = evercam.User.create_user({
 <p>
 This operation returns the list of streams a user currently has ownership of. It operates in both public access and protected access modes. If you do not provide any authentication information along with the request it will return all of the users public streams. If you provide authentication information it will return the list of public streams and streams owner by the user that you have been granted view access on. Provided the <strong>{username}</strong> exists the server will respond with a <%= code(200) %> status. If the username does not exist the server will respond with a <%= code(404) %> status.
 <h5>Example Request</h5>
-<pre><code class='http'>curl -X GET https://api.evercam.io/v1/users/{username}/streams \
+<!-- Nav tabs -->
+<ul class="nav nav-pills pull-right">
+  <li class="active"><a href="#curl1" data-toggle="tab">Curl</a></li>
+  <li><a href="#java1" data-toggle="tab">Java</a></li>
+  <li><a href="#node1" data-toggle="tab">Node</a></li>
+  <li><a href="#python1" data-toggle="tab">Python</a></li>
+</ul>
+
+<!-- Tab panes -->
+<div class="tab-content">
+  <div class="tab-pane active" id="curl1">
+    <pre><code class='http'>curl -X GET https://api.evercam.io/v1/users/{username}/streams \
   -u {your-username}
-</code></pre>
-<h5>Example Response</h5>
-<pre><code class='json'>{
+    </code></pre>
+    <h5>Example Response</h5>
+    <pre><code class='json'>{
  "streams": [{
     "id": "my-stream-name",
     "owner": "{your-username}",
@@ -144,5 +156,74 @@ This operation returns the list of streams a user currently has ownership of. It
   }]
 }
 
-</code></pre>
+    </code></pre>
+  </div>
+
+  <div class="tab-pane" id="java1">
+    <pre><code class='java'>import io.evercam.*;
+    </code></pre>
+  </div>
+
+  <div class="tab-pane" id="node1">
+    <pre><code class='javascript'>var evercam = require("evercam");
+ evercam.user.streams('joeyb', function (errors, streams) {
+    // asynchronously called
+  }
+);
+    </code></pre>
+    <h5>Example Success Response</h5>
+    <pre><code class='json'>[
+  {
+    "id": "my-stream-name",
+    "owner": "{your-username}",
+    "created_at": 1387370779,
+    "updated_at": 1387370779,
+    "endpoints": ["http://127.0.0.1:8080"],
+    "is_public": true,
+    "snapshots": {
+      "jpg": "/onvif/snapshot"
+    },
+    "auth": {
+      "basic": {
+        "username": "user1",
+        "password": "abcde"
+      }
+    }
+  },{
+    "id": "my-other-stream",
+    ...
+  }
+]
+    </code></pre>
+  </div>
+
+  <div class="tab-pane" id="python1">
+    <pre><code class='python'>import evercam
+streams = evercam.Stream.by_user('joeyb')
+    </code></pre>
+    <h5>Example Success Response</h5>
+    <pre><code class='json'>[
+  &lt;evercam.Stream object&gt; JSON: {
+    "id": "my-stream-name",
+    "owner": "{your-username}",
+    "created_at": 1387370779,
+    "updated_at": 1387370779,
+    "endpoints": ["http://127.0.0.1:8080"],
+    "is_public": true,
+    "snapshots": {
+      "jpg": "/onvif/snapshot"
+    },
+    "auth": {
+      "basic": {
+        "username": "user1",
+        "password": "abcde"
+      }
+    }
+  },
+  &lt;evercam.Stream object&gt; { ... }
+]
+    </code></pre>
+  </div>
+</div>
+
 
