--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -16,7 +16,7 @@
 				<p>Receive up to 100 requests per day.</p>
 			</div>
 			<div class="col-sm-4">
-				<i class=""><img src="/img/CIRCLE_dollars.svg" width="140"></i>
+				<i class=""><img src="/img/CIRCLE_dollars1.svg" width="140"></i>
 				<h4>Pay As You Go</h4>
 				<p>Buy additional 10,000 requests for &#36;20.</p>
 			</div>
