--- a/app/web/views/docs/api/v1/users.erb
+++ b/app/web/views/docs/api/v1/users.erb
@@ -175,7 +175,7 @@ This operation returns the list of streams a user currently has ownership of. It
     <pre><code class='json'>[
   {
     "id": "my-stream-name",
-    "owner": "{your-username}",
+    "owner": "joeyb",
     "created_at": 1387370779,
     "updated_at": 1387370779,
     "endpoints": ["http://127.0.0.1:8080"],
@@ -205,7 +205,7 @@ streams = evercam.Stream.by_user('joeyb')
     <pre><code class='json'>[
   &lt;evercam.Stream object&gt; JSON: {
     "id": "my-stream-name",
-    "owner": "{your-username}",
+    "owner": "joeyb",
     "created_at": 1387370779,
     "updated_at": 1387370779,
     "endpoints": ["http://127.0.0.1:8080"],
@@ -225,5 +225,3 @@ streams = evercam.Stream.by_user('joeyb')
     </code></pre>
   </div>
 </div>
-
-
