updated markup to index page

--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -1,29 +1,46 @@
 <% @title = 'Home' %> 
+
+<div class="jumbotron">
+	<div class="container">
+		<div class="intro_home">
+			<h1>We make it easy to develop software for cameras</h1>
+			<h4>With Evercam, you write software once and it will work with over 1,600 cameras.<br/>
+			OAuth 2.0 RESTful JSON API&apos;s use the standards you already know.<br>
+			Don&apos;t worry about camera network issues - leave this to your camera.</h4>
+		</div>
+		<p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
+	</div>
+</div>
+
+<!--
 <div class='col-sm-10 col-sm-offset-1'>
   <div id="beta">
-
-    <h1>Programmable Cameras</h1>
-    <h4>We make it simple to control, manage and interact with IP cameras <br />through a developer friendly RESTful interface</h4>
-
+	<div class="intro_home">
+		<h1>We make it easy to develop software for cameras</h1>
+		<h4>With Evercam, you write software once and it will work with over 1,600 cameras.<br/>
+		OAuth 2.0 RESTful JSON API&apos;s use the standards you already know.<br>
+		Don&apos;t worry about camera network issues - leave this to your camera.</h4>
+	</div>
+-->
     <br />
 	
 	<div class="row block-2">
 		<div class="icon_text">
 			<div class="col-sm-4">
 				<i class="icon-meh icon-large"></i>
-				<i class=""><img src="/img/CIRCLE_smiley.svg" width="140"></i>
+				<i class=""><img src="/img/CIRCLE_smiley.svg" width="120" alt="smiley"></i>
 				<h4>Free API</h4>
-				<p>Receive up to 100 requests per day.</p>
+				<p>100 requests per day<br/>Peer to peer<br/>Suitable for most uses</p>
 			</div>
 			<div class="col-sm-4">
-				<i class=""><img src="/img/CIRCLE_dollars1.svg" width="140"></i>
+				<i class=""><img src="/img/CIRCLE_dollars1.svg" width="120" alt="dollars"></i>
 				<h4>Pay As You Go</h4>
-				<p>Buy additional 10,000 requests for &#36;20.</p>
+				<p>10,000 additional requests for &#36;20<br/>Peer to peer<br/>For the power user</p>
 			</div>
 			<div class="col-sm-4">
-				<i class=""><img src="/img/CIRCLE_rocket.svg" width="140"></i>
+				<i class=""><img src="/img/CIRCLE_rocket.svg" width="120" alt="rocket"></i>
 				<h4>Pro API</h4>
-				<p>Unlimited requests per month, 30 day image/video archive and SSL connection.</p>
+				<p>Unlimited requests<br/>30 day archive<br/>SSL connection<br/>&#36;15 per camera per month</p>
 			</div>
 		</div>
 	</div>    
