Revert "Merge pull request #21 from evercam/webchanges"
This reverts commit dfde421bb7c85bf4e553758d5c3c2b2463c22b8b, reversing
changes made to 3b75d0f6cc4dbfd17f9a22f4168d47403403bb58.

--- a/app/web/views/layouts/_footer.erb
+++ b/app/web/views/layouts/_footer.erb
@@ -25,7 +25,7 @@
             <a href='/terms'>Terms</a>
             <a href='/privacy'>Privacy</a>
             <a href='/jobs'>Jobs</a>
-			<a href='http://blog.evercam.io/'>Blog</a>
+			<a href='#'>Blog</a>
 			<a href='/contact'>Contact</a>
           </span>
         </div>
