--- a/app/web/views/contact.erb
+++ b/app/web/views/contact.erb
@@ -31,14 +31,14 @@
 					<h4>Dublin</h4>
 					<p>12 Parnell Square East, Dublin 1, <br/>Ireland</p>
 					<p>Telephone:  +353 (1) 538 3333</p>
-					<p>E-Mail: <a href="mailto:info@evercam.io">Howya@evercam.io</a></p>
+					<p>E-Mail: <a href="mailto:info@evercam.io">info@evercam.io</a></p>
 					<div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kuabCDr3nlic" width="640" height="480"></iframe></small></div>
 				</div>
 				<div class="col-md-6">
 					<h4>Silicon Valley</h4>
 					<p>800 W. El Camino Real, Suite 350, Mountain View,<br/> CA 94040, USA</p>
 					<p>Telephone:  +353 (1) 538 3333</p>
-					<p>E-Mail: <a href="mailto:info@evercam.io">Whassup@evercam.io</a></p>
+					<p>E-Mail: <a href="mailto:info@evercam.io">info@evercam.io</a></p>
 					<div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kzJ0biOyIYMo" width="640" height="480"></iframe></div>
 				</div>
 			</div><!-- end address -->
