updated blog link on footer to go to correct url

--- a/app/web/views/layouts/_footer.erb
+++ b/app/web/views/layouts/_footer.erb
@@ -25,8 +25,8 @@
             <a href='/terms'>Terms</a>
             <a href='/privacy'>Privacy</a>
             <a href='/jobs'>Jobs</a>
-			<a href='#'>Blog</a>
-			<a href='/contact'>Contact</a>
+            <a href='http://blog.evercam.io/'>Blog</a>
+            <a href='/contact'>Contact</a>
           </span>
         </div>
       </div>
