updated markup to index page

--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -1,10 +1,102 @@
+
+<div class="slider-bg">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12 col-md-12 col-lg-12">
+				<div class="slider">
+					<div class="camera_wrap">
+						<div class="image">
+								<h1>We make it easy to develop software for cameras</h1>
+								<h4>With Evercam, you write software once and it will work with over 1,600 cameras.</h4>
+								<h4>OAuth 2.0 RESTful JSON API's use the standards you already know.</h4>
+								<h4>Don't worry about camera network issues - leave this to your camera.</h4>
+								<a href="#" class="btn btn-lg">
+									<button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
+								</a>
+						</div>
+					</div>
+				</div>     	
+			</div>
+		</div> 
+	</div> 
+</div>
+
+
 <% @title = 'Home' %> 
 <div class='col-sm-10 col-sm-offset-1'>
   <div id="beta">
+	
+	<div class="row">
+		<div class="titles">
+			<div class="col-md-4">
+				<h4>Developer</h4>
+			</div>
+			<div class="col-md-4">
+				<h4>Camera Owner</h4>
+			</div>
+			<div class="col-md-4">
+				<h4>Manafacturer</h4>
+			</div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="language">
+			<h4>We Speak Your Language</h4>
+			<div class="col-md-6">
+			
+			</div>
+			<div class="col-md-6">
+				<p>We&apos;ve got wrappers to make it easy to develop in your favourite language.</p>
+			</div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="device">
+			<h4>Bring Your Own Device</h4>
+			<div class="col-md-6">
+				<p>Our software is hardware agnostic. We work with over 10,000 camera manafactures including Sony, Panasonic and Axis.</p>
+			</div>
+			<div class="col-md-6">
 
-    <h1>Programmable Cameras</h1>
-    <h4>We make it simple to control, manage and interact with IP cameras <br />through a developer friendly RESTful interface</h4>
+			</div>
+		</div>
+	</div>
+		
+	<div class="row">
+		<div class="language">
+			<h4>Flexible Billing</h4>
+			<div class="col-md-6">
+			</div>
+			<div class="col-md-6">
+				<p>Lot&apos;s of options including development pays, customer requests, subscriptions, pay as you go and free tier.</p>
+			</div>
+		</div>
+	</div>
+	
 
+	<div class="row block-2">
+		<div class="icons">
+			<div class="col-sm-4">
+				<i class="icon-meh icon-large"></i>
+				<i class=""><img src="/img/CIRCLE_smiley.svg" width="120" alt="smiley"></i>
+				<h4>Free API</h4>
+				<p>100 requests per day<br/>Peer to peer<br/>Suitable for most uses</p>
+			</div>
+			<div class="col-sm-4">
+				<i class=""><img src="/img/CIRCLE_dollars1.svg" width="120" alt="dollars"></i>
+				<h4>Pay As You Go</h4>
+				<p>10,000 additional requests for &#36;20<br/>Peer to peer<br/>For the power user</p>
+			</div>
+			<div class="col-sm-4">
+				<i class=""><img src="/img/CIRCLE_rocket.svg" width="120" alt="rocket"></i>
+				<h4>Pro API</h4>
+				<p>Unlimited requests<br/>30 day archive<br/>SSL connection<br/>&#36;15 per camera per month</p>
+			</div>
+		</div>
+	</div>  
+	
     <br />
 	
 	<div class="signup_form">
