--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -9,8 +9,8 @@
 								<h1>We make it easy to develop software for cameras</h1>
 								<h4>With Evercam, you write software once and it will work with over 1,600 cameras.</h4>
 								<h4>OAuth 2.0 RESTful JSON API's use the standards you already know.</h4>
-								<h4>Don't worry about camera network issues - leave this to your camera.</h4>
-								<a href="#" class="btn btn-lg">
+								<h4>Forget the network issues, leave this to your camera...</h4>
+								<a href="/signup" class="btn btn-lg">
 									<button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
 								</a>
 						</div>
@@ -44,7 +44,7 @@
 		<div class="language">
 			<h4>We Speak Your Language</h4>
 			<div class="col-md-6">
-			
+				<img src="/img/developer.svg" width="150px" align="right">
 			</div>
 			<div class="col-md-6">
 				<p>We&apos;ve got wrappers to make it easy to develop in your favourite language.</p>
@@ -59,7 +59,7 @@
 				<p>Our software is hardware agnostic. We work with over 10,000 camera manafactures including Sony, Panasonic and Axis.</p>
 			</div>
 			<div class="col-md-6">
-
+				<img src="/img/manafacturers.png" width="300px;" align="left">
 			</div>
 		</div>
 	</div>
@@ -68,6 +68,7 @@
 		<div class="language">
 			<h4>Flexible Billing</h4>
 			<div class="col-md-6">
+				<img src="/img/credit.svg" width="160px" align="right">
 			</div>
 			<div class="col-md-6">
 				<p>Lot&apos;s of options including development pays, customer requests, subscriptions, pay as you go and free tier.</p>
