updated markup to index page

--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -27,15 +27,15 @@
   <div id="beta">
 	
 	<div class="row">
-		<div class="titles">
-			<div class="col-md-4">
-				<h4>Developer</h4>
-			</div>
-			<div class="col-md-4">
-				<h4>Camera Owner</h4>
-			</div>
-			<div class="col-md-4">
-				<h4>Manafacturer</h4>
+		<div class="titlesList">
+			<div class="col-md-12">
+				<ul>
+					<li><a href="#">Developer </a></li>
+					<li> | </li>
+					<li><a href="#"> Camera Owner </a></li>
+					<li> | </li>
+					<li><a href="#"> Manafacturer</a></li>
+				</ul>
 			</div>
 		</div>
 	</div>
@@ -44,7 +44,7 @@
 		<div class="language">
 			<h4>We Speak Your Language</h4>
 			<div class="col-md-6">
-				<img src="/img/developer.svg" width="150px" align="right">
+				<img src="/img/languages.png" width="370px" align="right">
 			</div>
 			<div class="col-md-6">
 				<p>We&apos;ve got wrappers to make it easy to develop in your favourite language.</p>
@@ -68,7 +68,7 @@
 		<div class="language">
 			<h4>Flexible Billing</h4>
 			<div class="col-md-6">
-				<img src="/img/credit.svg" width="160px" align="right">
+				<img src="/img/money.png" width="280px" align="right">
 			</div>
 			<div class="col-md-6">
 				<p>Lot&apos;s of options including development pays, customer requests, subscriptions, pay as you go and free tier.</p>
