--- a/app/web/views/contact.erb
+++ b/app/web/views/contact.erb
@@ -37,7 +37,7 @@
 				<div class="col-md-6">
 					<h4>Silicon Valley</h4>
 					<p>800 W. El Camino Real, Suite 350, Mountain View,<br/> CA 94040, USA</p>
-					<p>Telephone:  +353 (1) 538 3333</p>
+					<p>Telephone:  +1 (650) 4193588</p>
 					<p>E-Mail: <a href="mailto:info@evercam.io">wassup@evercam.io</a></p>
 					<div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kzJ0biOyIYMo" width="640" height="480"></iframe></div>
 				</div>
